# PicoSensores

./: README.md
CircuitPython/AnalogSensors/: analoghall_cpython.py  joy_cpython.py  ldr_cpython.py  ledsensor_cpython.py  phototran_cpython.py  potentiometer_cpython.py
CircuitPython/BasicDigitalSensors/: button_cpython.py  flame_cpython.py  gas_cpython.py  hall_cpython.py  keypad_cpython.py  pir_cpython.py  sound_cpython.py  vibration_cpython.py
CircuitPython/Fingerprint/: fingerdemo_cpython.py  fingersensor_cpython.py
CircuitPython/Misc/: hcsr04_cpython.py  ibutton_cpython.py  rotary_cpython.py
CircuitPython/Movement/: adxl345_cpython.py  mma8452_cpython.py  mpu6050_cpython.py  qmc5883l_cpython.py
CircuitPython/Pressure/: bme280_cpython.py  bmp180_cpython.py  bmp390_cpython.py
CircuitPython/RFID/: mifare_cpython.py  rfid125_cpython.py
CircuitPython/TemperatureSensors/: aht10_cpython.py  dht_cpython.py  ds18b20_cpython.py  hdc1080_cpython.py  lm35_tmp36_cpython.py  lm75a_cpython.py  mcp9808_cpython.py  termistor_cpython.py
MicroPython/AnalogSensors/: analoghall_mpython.py  joy_mpython.py  ldr_mpython.py  ledsensor_mpython.py  phototrans_mpython.py  potentiometer_mpython.py
MicroPython/BasicDigitalSensors/: button_mpython.py  flame_mpython.py  gas_mpython.py  hall_mpython.py  keypad_mpython.py  pir_mpython.py  sound_mpython.py  vibration_mpython.py
MicroPython/Fingerprint/: fingerdemo_mpython.py  fingersensor_mpython.py
MicroPython/Misc/: hcsr04_mpython.py  ibutton_mpython.py  (+1 more)
SDK/TemperatureSensors/termistor/: CMakeLists.txt  termistor_sdk.c
(+94 files in other folders)
